fix spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,6 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
-  background: #f5f5f5;
   font-size: 14px;
   padding: 30px;
   -webkit-font-smoothing: antialiased;
@@ -42,13 +41,9 @@ p {
   line-height: 1.5;
 }
 .wrapper {
-  background: #4B6A78;
   max-width: 960px;
   margin: 0 auto;
   position: relative;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .sidebar-wrapper {
   position: absolute;
@@ -212,8 +207,12 @@ p {
 .main-wrapper .projects-section .intro {
   margin-bottom: 30px;
 }
-.main-wrapper .projects-section .item {
-  margin-bottom: 15px;
+/*.main-wrapper .projects-section .item {
+  margin-bottom: 12%;
+}*/
+.hrSpace {
+  margin-top: 6%;
+  margin-bottom: 6%;
 }
 .skillset .item {
   margin-bottom: 15px;
@@ -304,6 +303,7 @@ body {
 }
 
 .app-title {
+  font-size: 18px;
   font-weight: 500;
 }
 
@@ -334,9 +334,6 @@ body {
   }
   .row {
     margin-top: 0px;
-  }
-  .job-title {
-    text-align: center;
   }
 }
 
